# altana-atlas

./: .gitignore  README.md  db_import.sh  pyproject.toml
atlas-api/: README.md  db_import.sh  main.py  pyproject.toml
atlas-api/api/: endpoint.py
atlas-api/model/: apps.py
atlas_app/: main.py
atlas_app/api/v1/: api.py
atlas_app/api/v1/endpoints/: apps.py
atlas_app/model/: apps.py
atlas_app/service/: db.py
test/: test_main.py
