# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "AtlasAPI_project"
version = "0.1.0"
description = "Atlas API"
readme = "README.md"
authors = ["Krishan Bhatt"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = []

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
databases ="^0.5.0"
company = "^0.0.4"

[tool.poetry.dev-dependencies]
isort = "^5.0.0"
black = "^19.10b0"
pytest = "^5.4.1"
uvicorn = "^0.11.5"


